--- a/templates/user-designed-query/large-data-table.html
+++ b/templates/user-designed-query/large-data-table.html
@@ -831,6 +831,10 @@
   <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="summary-page-save-query.html">
     Save my query
   </a>
+<!--    this would button would be displayed in the update save query journey allowing the user to choose the update option -->
+    <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="Update-saved-query-summary-page.html">
+      Update saved query
+    </a>
 <!--This is to take the user to a CSV file enabling the user to view the results and share the-->
   <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="#">
    Download query results
