--- a/templates/user-designed-query/save-query-add-note.html
+++ b/templates/user-designed-query/save-query-add-note.html
@@ -48,7 +48,7 @@
     </details>
     <div class="nhsuk-form-group nhsuk-u-margin-bottom-5">
         <label class="nhsuk-label nhsuk-u-margin-top-5" for="search-box">
-          <h2>Add a category </h2>
+          <h2>Add a tags </h2>
         </label>
         <div class="nhsuk-hint" id="example-hint">
           You can choose a category to save your query under.
@@ -98,11 +98,11 @@
       <input class="nhsuk-input" id="example" name="example" type="text">
     </div>
 
-  <div class="nhsuk-character-count" data-module="nhsuk-character-count" data-maxlength="200">
+  <div class="nhsuk-character-count" data-module="nhsuk-character-count" data-maxlength="500">
     <div class="nhsuk-form-group">
       <h2 class="nhsuk-label-wrapper">
         <label class="nhsuk-label nhsuk-label--l" for="more-detail">
-          Add details of the query you are saving (optional)
+          Add a comment detailing the nature of the query (optional)
         </label>
       </h2>
       <div class="nhsuk-hint" id="more-detail-hint">
@@ -112,7 +112,7 @@
     </div>
 
     <div class="nhsuk-hint nhsuk-character-count__message" id="more-detail-info">
-      You can enter up to 200 characters
+      You can enter up to 500 characters
     </div>
 
   </div>
