--- a/templates/user-designed-query/saved-query-summary-page.html
+++ b/templates/user-designed-query/saved-query-summary-page.html
@@ -13,7 +13,7 @@
     <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--xl">
       <h1 class="nhsuk-fieldset__heading nhsuk-u-margin-bottom-4">
             <span class="nhsuk-caption-l">
-                UDQ saved query
+                Saved query
               <span class="nhsuk-u-visually-hidden"> - </span>
             </span>
         Large query for looking at VMPP Cat A prices
@@ -275,7 +275,7 @@
   <div class="nhsuk-inset-text">
     <span class="nhsuk-u-visually-hidden">Create a clone of this summary</span>
 
-    <p>Create a new version and tailor this query to your needs. You can duplicate this query and adjust it to match your requirements.<a href="saved-query-summary-clone.html"> Create clone</a>.</p>
+    <p>You can duplicate this query and adjust it to match your requirements <a href="saved-query-summary-clone.html">Create new version</a>.</p>
   </div>
 
   <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="load-page.html" id="save-continue">
