--- a/templates/user-designed-query/saved-udq-view.html
+++ b/templates/user-designed-query/saved-udq-view.html
@@ -16,16 +16,13 @@
   <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--xl">
     <h1 class="nhsuk-fieldset__heading nhsuk-u-margin-bottom-4">
             <span class="nhsuk-caption-l">
-                Saved user defined query
+                Saved query
               <span class="nhsuk-u-visually-hidden"> - </span>
             </span>
       View saved queries
     </h1>
   </legend>
 </fieldset>
-
-
-
 
 
 <div class="nhsuk-tabs" data-module="nhsuk-tabs">
@@ -66,7 +63,11 @@
       </a>
     </li>
 
-
+    <li class="nhsuk-tabs__list-item">
+      <a class="nhsuk-tabs__tab" href="#public">
+        Archive queries
+      </a>
+    </li>
   </ul>
   <!--My recent-->
   <div class="nhsuk-tabs__panel" id="recent">
@@ -507,10 +508,10 @@
         </a>
       </div>
     </nav>
-    <a class="nhsuk-button" data-module="nhsuk-button" type="submit"
-       href="saved-query-share-confirmation.html">
-      Share selected
-    </a>
+<!--    <a class="nhsuk-button" data-module="nhsuk-button" type="submit"-->
+<!--       href="saved-query-share-confirmation.html">-->
+<!--      Share selected-->
+<!--    </a>-->
   </div>
 
   <!--My queries-->
@@ -1332,10 +1333,10 @@
         </a>
       </div>
     </nav>
-    <a class="nhsuk-button" data-module="nhsuk-button" type="submit"
-       href="saved-query-share-confirmation.html">
-      Share selected
-    </a>
+<!--    <a class="nhsuk-button" data-module="nhsuk-button" type="submit"-->
+<!--       href="saved-query-share-confirmation.html">-->
+<!--      Share selected-->
+<!--    </a>-->
   </div>
 
   <!--My shared-->
@@ -1800,10 +1801,7 @@
         </a>
       </div>
     </nav>
-    <a class="nhsuk-button" data-module="nhsuk-button" type="submit"
-       href="saved-query-share-confirmation.html">
-      Share selected
-    </a>
+
   </div>
 
   <!--Public-->
@@ -2229,10 +2227,10 @@
         </a>
       </div>
     </nav>
-    <a class="nhsuk-button" data-module="nhsuk-button" type="submit"
-       href="saved-query-share-confirmation.html">
-      Share selected
-    </a>
+<!--    <a class="nhsuk-button" data-module="nhsuk-button" type="submit"-->
+<!--       href="saved-query-share-confirmation.html">-->
+<!--      Share selected-->
+<!--    </a>-->
   </div>
 
 </div>
