--- a/templates/user-designed-query/saved-updated-query-summary.html
+++ b/templates/user-designed-query/saved-updated-query-summary.html
@@ -1,7 +1,7 @@
 summar{% extends "base.html" %}
 {% block content %}
 <div class="nhsuk-back-link nhsuk-u-margin-bottom-6">
-  <a class="nhsuk-back-link__link" href="save-query-add-note.html">
+  <a class="nhsuk-back-link__link" href="updated-save-query-page.html">
     <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 24 24"
          aria-hidden="true" height="24" width="24">
@@ -18,7 +18,7 @@ summar{% extends "base.html" %}
                  Save user defined query
               <span class="nhsuk-u-visually-hidden"> - </span>
             </span>
-        Saved query summary
+        Saved new query summary
       </h1>
     </legend>
 
@@ -76,14 +76,14 @@ summar{% extends "base.html" %}
       </dl>
 
       <dl class="nhsuk-summary-list">
-      <div class="nhsuk-summary-list__row">
-        <dt class="nhsuk-summary-list__key">
-          Title
-        </dt>
-        <dd class="nhsuk-summary-list__value">
-          Large query for looking at VMPP Cat a pricing
-        </dd>
-      </div>
+        <div class="nhsuk-summary-list__row">
+          <dt class="nhsuk-summary-list__key">
+            Title
+          </dt>
+          <dd class="nhsuk-summary-list__value">
+            Large query for looking at VMPP Cat a pricing
+          </dd>
+        </div>
       </dl>
       <!--      <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend&#45;&#45;l">-->
       <!--        <h2 class="nhsuk-fieldset__heading">Share query-->
@@ -216,10 +216,10 @@ summar{% extends "base.html" %}
       <div class="nhsuk-details__text">
         <H3>Note </H3>
         <ul>
-          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </li>
 
         </ul>
@@ -229,8 +229,8 @@ summar{% extends "base.html" %}
   </fieldset>
 
   <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit"
-     href="Save-query-confirmation.html" id="submitButton">
-    Save query to library
+     href="update-saved-query-confirmation.html" id="submitButton">
+    Save new query version to library
   </a>
 
 </div>
