--- a/templates/user-designed-query/saved-query-summary-clone.html
+++ b/templates/user-designed-query/saved-query-summary-clone.html
@@ -13,7 +13,7 @@
     <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--xl">
       <h1 class="nhsuk-fieldset__heading nhsuk-u-margin-bottom-4">
             <span class="nhsuk-caption-l">
-                User saved query
+                Saved query
               <span class="nhsuk-u-visually-hidden"> - </span>
             </span>
         Large query for looking at VMPP Cat A prices.Version 2
