Resolved merge conflicts

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@
       <li><a href="/user-designed-query/home-page">New UDQ </a></li>
       <li><a href="/tce-2384/index">(TCE-2384) VTM ingredients in CDR</a></li>
       <li><a href="/user-designed-query/hierarchy-options-view.html">(TCE-2376) Hierarchy viewer options</a></li>
+      <li><a href="/tce-2592/update-supplier-prototype.html">(TCE-2592)</a></li>
     </ul>
   </div>
 </div>
